fix spacing of reviews on Home

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -80,6 +80,11 @@
     width: 60vw;
   }
 
+  .reviewContainer {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
   .review {
     border-radius: 15px;
     width: 30vw;
